--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
+#logo {
+  background-color: red;
+  position: fixed;
+  z-index: 333;
+  mix-blend-mode: difference;
+}
+
 
 * {
   box-sizing: border-box;
@@ -5,11 +12,6 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
 
 body {
   color: white;
