--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  text-align: center;
   min-height: 100vh;
 }
 
