--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,36 @@
 #logo {
   position: fixed;
   z-index: 9;
-  text-align: center;
   backdrop-filter: blur(12px);
   white-space: nowrap;
   -webkit-backdrop-filter: blur(12px);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 ::-webkit-scrollbar {
   display: none;
 }
 #say {
+  font-size: 250%;
   margin-top: 70%;
-  text-align: center;
   
+}
+.n {
+  z-index: 16;
+}
+.cresendo {
+  position: relative;
+  width: 100%;
+  height: 200vh;
+}
+
+#mr_penis {
+  font-size: 3em;
+}
+
+.www {
+  justify-content: center;
 }
 .hig {
   height: 100vh;
@@ -21,7 +39,7 @@
   font-size: xxx-large;
 }
 #part1 {
-  opacity: 1;
+  opacity: .5;
   font-size: xxx-large;
 }
 .flip {
