--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,15 @@
 .main {
   text-align: center;
 }
+html.lenis {
+  height: auto;
+}
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
