--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,20 @@
+.main {
+  text-align: center;
+}
+html.lenis {
+  height: auto;
+}
+.lenis.lenis-smooth {
+  scroll-behavior: auto;
+}
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+
 #logo {
   position: fixed;
   z-index: 9;
@@ -36,9 +53,7 @@
   font-size: 3em;
 }
 
-.www {
-  justify-content: center;
-}
+
 .hig {
   height: 100vh;
 }
@@ -47,8 +62,8 @@
   color: red;
 }
 #part1 {
-  opacity: .5;
-  font-size: xxx-large;
+  font-size: 300%;
+  opacity: 0.5;
 }
 
 
@@ -60,9 +75,6 @@
 
 .baseline {
   white-space: nowrap;
-}
-.awe {
-  font-size: medium;
 }
 
 * {
@@ -86,8 +98,3 @@ a {
   font-size: 450%;
   color: red;
 }
-/*@media screen and (max-width: 600px) {*/
-/*  #mr_penis {*/
-/*    font-size: 2.55em;*/
-/*  }*/
-/*}*/
